Added link to source

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </span>
         <div id="whois-content">{{.Whois}}</div>
         <footer>
-            <!--<span><a href="#">[source]</a></span>-->
+            <span><a href="https://github.com/jweber/goip">[source]</a></span>
         </footer>
 
         <script>
